<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ResetPasswordActivity"
	android:orientation="vertical">

	<TextView
		android:id="@+id/wlcmbck"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/resetp"
		android:fontFamily="@font/montserrat_semi_bold"
		android:textColor="#313131"
		android:textSize="32sp"
		android:layout_marginStart="24dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginTop="90dp">
	</TextView>

	<TextView
		android:id="@+id/signin"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Reset code was sent to your email. Please enter the code and create new password."
		android:fontFamily="@font/montserrat_light"
		android:textColor="#9b9b9b"
		android:textSize="16sp"
		android:layout_marginStart="24dp"
		android:layout_marginTop="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/wlcmbck">
	</TextView>

	<TextView
		android:id="@+id/resetcd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/resetcd"
		android:textColor="#313131"
		android:textSize="20sp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="48dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/signin">
	</TextView>

	<EditText
		android:id="@+id/edit_resetcd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="Enter your reset code"
		android:textColor="#313131"
		android:layout_marginStart="20dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="24dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/resetcd">
	</EditText>

	<TextView
		android:id="@+id/newpw"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/newpwd"
		android:textColor="#313131"
		android:textSize="20sp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="24dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/edit_resetcd">
	</TextView>

	<EditText
		android:id="@+id/newpw_edit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="Enter your new password"
		android:textColor="#313131"
		android:layout_marginStart="20dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="24dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/newpw">
	</EditText>

	<TextView
		android:id="@+id/confpw"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/confpwd"
		android:textColor="#313131"
		android:textSize="20sp"
		android:layout_marginStart="20sp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="24dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/newpw_edit">
	</TextView>

	<EditText
		android:id="@+id/confpw_edit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="Confirm your new password"
		android:textColor="#9b9b9b"
		android:layout_marginLeft="20sp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="24dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/confpw">
	</EditText>

	<android.widget.Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/changepw"
		android:textColor="#FFFFFF"
		android:textSize="18dp"
		android:background="@drawable/button_red"
		android:layout_marginStart="24dp"
		android:layout_marginEnd="24dp"
		android:layout_marginTop="64dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/confpw_edit">
	</android.widget.Button>
</androidx.constraintlayout.widget.ConstraintLayout>