<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".ForgotPasswordActivity">

	<TextView
		android:id="@+id/forgotpw"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:fontFamily="@font/montserrat_semi_bold"
		android:text="@string/forgotpw"
		android:textSize="32sp"
		android:textColor="#313131"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginTop="90dp">
	</TextView>

	<TextView
		android:id="@+id/signin"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="8dp"
		android:fontFamily="@font/montserrat_light"
		android:text="Please enter your email below to reveice your password reset instruction"
		android:textColor="#9b9b9b"
		android:textSize="16sp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/forgotpw"
		tools:ignore="TextContrastCheck">
	</TextView>

	<TextView
		android:id="@+id/resetcd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/username"
		android:textSize="20dp"
		android:textColor="#313131"
		android:layout_marginStart="24dp"
		android:layout_marginTop="48dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/signin">
	</TextView>

	<EditText
		android:id="@+id/inputemail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="24dp"
		android:layout_marginTop="8dp"
		android:layout_marginRight="24dp"
		android:hint="Enter Your Email"
		android:inputType="textEmailAddress"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/resetcd"
		tools:ignore="TouchTargetSizeCheck,TextContrastCheck">
	</EditText>

	<android.widget.Button
		android:id="@+id/submitsend"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/send"
		android:textColor="#FFFFFF"
		android:background="@drawable/button_red"
		android:textSize="18sp"
		android:layout_marginStart="24dp"
		android:layout_marginEnd="24dp"
		android:layout_marginTop="32dp"
		app:layout_constraintTop_toBottomOf="@id/inputemail">
	</android.widget.Button>

</androidx.constraintlayout.widget.ConstraintLayout>